14-EBS-CSI-Install-Kubernetes-Storage/istio-service-mesh/test-gateway/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-istio-gateway
  namespace: istio-ingress
spec:
  selector:
    # istio: ingress
    istio: ingressgateway
    # istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: myk8s-magiclab396-credential
    hosts:
    - "*"  
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myk8s
spec:
  hosts:
  - "myk8s.magiclab396.com"
  gateways:
  - my-istio-gateway
  http:
  - match:
    - uri:
        prefix: /productpage
    route:
    - destination:
        # host: productpage.default.svc.cluster.local
        host: productpage
        port:
          number: 9080
  # - match:
  #   - uri:
  #       exact: /productpage
  #   - uri:
  #       prefix: /static
  #   - uri:
  #       exact: /login
  #   - uri:
  #       exact: /logout
  #   - uri:
  #       prefix: /api/v1/products
    # - route:
    #     - destination:
    #         host: productpage
    #         port:
    #           number: 9080
      # match:
      #   - uri:
      #       prefix: /
  # - match:
  #   - uri:
  #       exact: /dashboard1
  #   route:
  #   - destination:
  #       host: my-k8s-dashboard-kubernetes-dashboard.k8s-dashboard.svc.cluster.local
  #       port:
  #         number: 9090
  # - match:
  #   route:
  #   - destination:
  #       host: grafana.istio-system.svc.cluster.local
  #       port:
  #         number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "myk8s.grafana.magiclab396.com"
  gateways:
  - my-istio-gateway
  http:
  # - match:
  #   - uri:
  #       exact: /productpage
  #   - uri:
  #       prefix: /static
  #   - uri:
  #       exact: /login
  #   - uri:
  #       exact: /logout
  #   - uri:
  #       prefix: /api/v1/products
    - route:
      - destination:
          host: grafana.istio-system.svc.cluster.local
          port:
            number: 3000
# ---

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: dashboard
# spec:
#   hosts:
#   - "myk8s.dashboard.magiclab396.com"
#   gateways:
#   - my-istio-gateway
#   http:
#   # - match:
#   #   - uri:
#   #       exact: /productpage
#   #   - uri:
#   #       prefix: /static
#   #   - uri:
#   #       exact: /login
#   #   - uri:
#   #       exact: /logout
#   #   - uri:
#   #       prefix: /api/v1/products
#     - route:
#       - destination:
#           host: my-k8s-dashboard-kubernetes-dashboard.k8s-dashboard.svc.cluster.local
#           port:
#             number: 443
